@@ -1,6 +1,6 @@
 # form.tcl -- generate forms automatically.
 
-# Copyright 2002-2004 The Apache Software Foundation
+# Copyright 2002-2021 The Apache Software Foundation
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
